# matrix_lib

./: .main.c.swp  CMakeLists.txt  Makefile  README.md  main  main.c  main.gcno  matrix.c  matrix.h
include/: matrix.h
src/: .matrix.c.swp  matrix.c  matrix.gcno
tests/: test_matrix_init.c  test_matrix_math.c  test_matrix_operations.c
